--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
+# build
 build/
+# vscode
 .vscode/
+# vscode debug
 __debug_bin
+# Macos
+.DS_Store
